--- a/LaTeX/GeebsActivation.tex
+++ b/LaTeX/GeebsActivation.tex
@@ -8,7 +8,7 @@
    Bird, George\
   \texttt{geebs@anndevs.com}
   \and
-  Polivoda, Maxim E.\
+  Polivoda, Maxim\
   \texttt{u7w2@anndevs.com}
 }
 \date{07 October 2020}
