--- a/LaTeX/GeebsActivation.tex
+++ b/LaTeX/GeebsActivation.tex
@@ -98,7 +98,7 @@
     As linear algebra multiplications transforms about the origin.
        
     \section{Criteria Fulfilling Functions}
-       
+    \subsubsection{Geebs' Tanh Function}
     We first introduce the "Geebs' Tanh Function" which meets all of the strict and relaxed criteria (Eqn. 1).
 
     \begin{equation}
@@ -117,12 +117,11 @@
     \right. \]
 
     This equation does not reduce the dimensionality of the manifold. This activation function can be considered in two halves, the magnitude and direction. The magnitude is $\tanh|\bar{n}|$ and since this is dependent only on the magnitude of $\bar{n}$ then it is a spherically symmetric function. The direction is given by $\hat{n}$ such that it is a unit vector about the origin, therefore it is a spherically symmetric. The direction is a projection, such that any point represented by a vector from the origin gets projected to become a unit vector from the origin. Therefore, any point on a line through the origin remains on that line after the transformation. This function is also continuous, centred around the origin and bounded with a maximum radius of one from the origin. It also happens to be a smooth function.
+      
+    Improvements should be observed by replacing almost all usages of Sigmoid and Tanh with the Geeb's Tanh Function. One exception being when using Sigmoid as a blocking gate such as in a LSTM, in this example a function is needed which has an output space ranging from zero (blocked) to one (pass) for each component in the vector. We offer an adapted Geebs Tanh functions which meets these criteria.
     
-    
-    Improvements should be observed by replacing almost all usages of Sigmoid and Tanh  with the Geeb's Tanh Function. One exception being when using Sigmoid as a blocking gate such as in a LSTM, in this example a function is needed which has an output space ranging from zero (blocked) to one (pass) for each component in the vector. We offer an adapted geebs tanh functions which meets these criteria.
-    
-    
-    Unfortunately, the Geeb's Tanh Function does have a gradient which goes to zero. This could cause issues with vanishing gradients
+    Unfortunately, the Geeb's Tanh Function does have a gradient which goes to zero, this will cause issues with vanishing gradients just as Sigmoid and Tanh do.
+
 
 
 
