--- a/LaTeX/GeebsActivation.tex
+++ b/LaTeX/GeebsActivation.tex
@@ -125,12 +125,19 @@
     \subsubsection{Maxim-ReLU Function}
 
     The second of our criteria derived functions is the Maxim-ReLU function. This meets all of the strict criteria but does not meet the relaxed bound function criteria . This is characteristic of a ReLU function though, so is acceptable. It applies a constant scaling given by $\alpha$ within a certain radius of the origin given by $\beta$. Consequently, we get a function similar to a typical ReLU function but it is applied radially.
+    
     \begin{equation}
         \label{eqn:Maxim-ReLU Function}
         \bar{n}=\left(\max\left(\alpha\left(\bar{n}-\beta\right),\bar{n}-\beta\right)+\alpha\beta\right)\times\hat{n} 
     \end{equation}
+    
     Where ${0} < \alpha \leq {1}$ and ${0} < \beta$. This function does not reduce the manifold's dimensionality. It can again be broken down into a magnitude equation $\left(\max\left(\alpha\left(\bar{n}-\beta\right),\bar{n}-\beta\right)+\alpha\beta\right)$ which is only dependent on the inputs data points's distance from origin and a direction $\hat{n}$ dependent only on the initial direction of the data point. Thus, ensuring spherical symmety and projection, its output space is also centred on the origin. However, this function is not bounded, just like a standard ReLU, and is not smooth. Despite this, it does not suffer from gradients tending to zero as the input radius tends to infinity, therefore will not suffer badly from the vanishing gradients. This function should again provide improvements by replacing all cases of ReLU with Maxim-ReLU.
     
+    \subsubsection{Hyper-Cubic Projection}
+    
+    We have now replaced two of the most commonly used activation functions, which covers most of the general uses of activation functions. However, as previously mentioned, there are some unique use cases in which our functions are not applicable. One of these use cases is a blocking gate in an LSTM, this requires a hyper-cubic output space not a hyper-spherical output space. Of course this is incompatible with the spherical symmetry criteria, but since this is a unique use case and is widely used we have proposed a projection equation to map a input space to a hyper-cubic space.
+
+
      
 
 
