--- a/LaTeX/GeebsActivation.tex
+++ b/LaTeX/GeebsActivation.tex
@@ -44,7 +44,7 @@
     
     \subsubsection{Spherically Symmetric}
     
-    Any asymmetries result it uneven distribution of manifolds. This is simply due to certain regions of space being more preferable than others to store information. Thus, by introducing symmetries we attempt to make all space have even, and preferable, probabilities to store manifolds. The more available space which manifolds can occupy; the more information the network can encode. To make clear we are not saying that activation functions which result in a finite output space are bad, but their finite bounds needs to be an equal distance from the centre of the output space in all directions. Therefore, we need a spherically symmetric activation function; then there is no unfavourable direction.
+    Any asymmetries result it uneven distribution of manifolds. This is simply due to certain regions of space being more preferable than others to store information. Thus, by introducing symmetries we attempt to make all space have even, and better suited probabilities to store manifolds. The more available space which manifolds can occupy, the more information the network can encode. To clarify we are not saying that activation functions which result in a finite output space are bad, but their finite bounds needs to be equidistant from the centre of the output space in all directions. Therefore, we need a spherically symmetric activation function; then there is no unfavourable direction.
 
     By applying this condition the coordinate system used no longer influences the distribution of manifolds in space, thus it is not possible to figure out which direction the basis vectors (neurons) point just from observing the output space of the function. We can only determine the centre of the space. This makes the network behave as a more unified system rather than a collection of independent neurons. There is no longer anything special about individual neurons besides the way we notate the mathematical computations. No widely used activation functions I know of currently possess this property
         
@@ -52,11 +52,11 @@
 
     \subsubsection{Projection}
         
-    Finally there are many ways in which a spherical-symmetric space could be created for the purpose of an activation function. One could imagine taking a 2D input space and wrapping distant regions in to an infinitely thin spiral pattern - creating a whirlpool like spherically-symmetric finite output space. This function fulfils all our criteria so far, but would produce a very poorly performing network. The reason for this requires another look at manifold theory.
+    Finally there are many ways in which a spherically-symmetric space could be created for the purpose of an activation function. One could imagine taking a two-dimensional input space and wrapping distant regions in to an infinitely thin spiral pattern - creating a whirlpool-like spherically-symmetric finite output space. This function fulfils all our criteria so far, but would produce a very poorly performing network. The reason for this requires another look at manifold theory.
 
-    The neural network transforms the input manifold to express useful trends in the information. Since the network mostly uses linear transformations, except the activation function, to classify data then these trends should be expressed linearly to allow the following layers in the network to mostly easily interpret them. We must also make the assumption, that these important trend-lines are most often origin-centric or pass through the origin. Thus, for origin-centric vectors, if the values along the trend-line change sign they reflect that the opposite to the trend was identified in the data. We shall refer to these important trend-lines as "meaning vectors" as they are often interpretable to meaning humans. For example it is what Primary Component Analysis attempts to find. There could be a meaning vector for the amount of the colour red in the input data, where the negative sign may correspond to blue. Of course there are meaning-vectors between every permutations of all data points, however, only some are important to the network, and we shall assume that these ones are roughly origin-centric.
+    The neural network transforms the input manifold to express useful trends in the information. Since the network mostly uses linear transformations, except the activation function, to classify data, then these trends should be expressed linearly to allow the following layers in the network to mostly easily interpret them, especially considering the substantial use of linear algebra. We must also make the assumption that important trend-lines are most often origin-centric or pass through the origin. In theory, if a point on the origin-centric vector changes sign, then the meaning of that point would be the direct opposite of the original point, analogous to an antonym. We shall refer to these important trend-lines as "meaning vectors" as they are often interpretable by humans. For example it is what Primary Component Analysis attempts to find. There could be a meaning vector for the amount of the colour red in the input data, where the negative sign may correspond to blue. Of course there are meaning-vectors between every permutations of all data points, however only some are important to the network and we shall assume that these ones are roughly origin-centric.
 
-    This origin-centricty is not a great assumption to make. However, non-linearities must be introduced to the function and due to the spherical symmetry then there is an enforced centre to the space. Thus, the non-linearity is isotropic around the centre to ensure symmetry. We hope this will cause the network to migrate its most important meaning-vectors to be origin centric. We mention this, as it is not possible using a non-linear function to keep meaning-vectors linear if they start anywhere in space. We can only keep vectors passing through a certain point linear and so we choose this to be the centre of the space.
+    This origin-centricity is not a great assumption to make. However, non-linearities must be introduced to the function and due to the spherical symmetry then there is an enforced centre to the space. Thus, the non-linearity is isotropic around the centre to ensure symmetry. We hope this will cause the network to migrate its most important meaning-vectors to be origin centric. We mention this, as it is not possible using a non-linear function to keep meaning-vectors linear if they start anywhere in space. We can only keep vectors passing through a certain point linear and so we choose this to be the centre of the space.
 
     We can reason that the following layers of the network will recognise these trend-lines and attempt to interpret them further: interpolating and extrapolating its findings. However if the space curves, then so does the meaning vector, thus any attempt at extrapolation fails as the network will assume it remains linear trend as it has observed near the origin. If the network accounts for the curving, it has dedicated more neurons to interpret the more complex representation this will also still extrapolate poorly as the network is using linear algebra to approximate this curve. This is needless, requiring more time for the network to learn and reduces the effective networks processing power on the input data. These problems can be avoided by ensuring that vectors through the origin remain linear. 
         
